[package]
name = "pyline-libs"
version = "0.2.0"
keywords = ["analyzer", "code-analysis", "cli", "statistics", "code-quality"]
edition = "2024"
license = "MIT"
description = """
PyLine - Codebase Analyzer

A Rust-powered tool for analyzing code's projects with precision filtering capabilities.
Scan directories, collect files based on multiple criteria, and extract detailed code
statistics with configurable exclusions and async performance.
"""

[dependencies]
async-recursion = "1.1.1"
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3.31"
phf = { version = "0.13.1", features = ["macros"] }

[dev-dependencies]
uuid = { version = "1.19.0", features = ["v4"] }